Tweaking getglue/last.fm display to prevent more wrapped items showing

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -58,7 +58,7 @@ ul#getglue, ul#lastfm {
   padding: 0;
   text-align: center;
   overflow: hidden;
-  height: 9em;
+  height: 9.3em;
   font-size: 80%;
   li {
     display: inline;
@@ -66,7 +66,7 @@ ul#getglue, ul#lastfm {
     width: 8em;
     height: 9.3em;
     text-align: center;
-    padding: 0 1em 0 1em;
+    padding: 0 1em 1em 1em;
     float: left;
     overflow: hidden;
     img {
@@ -80,6 +80,7 @@ ul#lastfm {
   li {
     img {
       height: 5.5em;
+      overflow: hidden;
     }
   }
 }
